[gd_scene load_steps=12 format=3 uid="uid://c2thbxtdaumt4"]

[ext_resource type="Shader" path="res://Script/pause_menu.gdshader" id="1_0s8c7"]
[ext_resource type="Script" path="res://Script/pause_menu.gd" id="1_i1a0d"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_gjuyn"]
shader = ExtResource("1_0s8c7")
shader_parameter/lod = 0.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7p482"]
bg_color = Color(0.501407, 0.501406, 0.501406, 0.6)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_xe7xt"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8g4js"]
bg_color = Color(0.687215, 0.687215, 0.687215, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_color = Color(0, 0, 0, 0.239216)
shadow_size = 5
shadow_offset = Vector2(0, 3.41)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_e60ls"]
bg_color = Color(0.864675, 0.864675, 0.864675, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_color = Color(0, 0, 0, 0.239216)
shadow_size = 5
shadow_offset = Vector2(0, 3.41)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_j8e1g"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_color = Color(0, 0, 0, 0.239216)
shadow_size = 5
shadow_offset = Vector2(0, 3.41)

[sub_resource type="Animation" id="Animation_b6xwh"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PanelContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_7by83"]
resource_name = "blur"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PanelContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0cmdk"]
_data = {
"RESET": SubResource("Animation_b6xwh"),
"blur": SubResource("Animation_7by83")
}

[node name="PauseMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_i1a0d")

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_gjuyn")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 296.0
offset_bottom = -260.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_7p482")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/separation = 116

[node name="Resume" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0.273873, 0.273873, 0.273873, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 50
theme_override_styles/focus = SubResource("StyleBoxEmpty_xe7xt")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_8g4js")
theme_override_styles/hover = SubResource("StyleBoxFlat_e60ls")
theme_override_styles/normal = SubResource("StyleBoxFlat_j8e1g")
text = "Resume"

[node name="BackToMainMenuFromPause" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0.273873, 0.273873, 0.273873, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 50
theme_override_styles/focus = SubResource("StyleBoxEmpty_xe7xt")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_8g4js")
theme_override_styles/hover = SubResource("StyleBoxFlat_e60ls")
theme_override_styles/normal = SubResource("StyleBoxFlat_j8e1g")
text = "Back to Main Menu"

[node name="Exit" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0.273873, 0.273873, 0.273873, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 50
theme_override_styles/focus = SubResource("StyleBoxEmpty_xe7xt")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_8g4js")
theme_override_styles/hover = SubResource("StyleBoxFlat_e60ls")
theme_override_styles/normal = SubResource("StyleBoxFlat_j8e1g")
text = "Exit The Game
"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_0cmdk")
}

[connection signal="pressed" from="PanelContainer/VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/BackToMainMenuFromPause" to="." method="_on_back_to_main_menu_from_pause_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Exit" to="." method="_on_exit_pressed"]
